--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,6 +9,8 @@ jobs:
       - name: Build the Docker image
         run: |
           docker version
+          # 登录阿里云镜像仓库
+          docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }} registry.cn-hangzhou.aliyuncs.com
           # 使用Dockerfile构建镜像
           docker build . --file Dockerfile --tag registry.cn-hangzhou.aliyuncs.com/harvestiot/jenkins:latest
           # 推送镜像到镜像仓库
